1 ere partie optimisation

--- a/a-propos.html
+++ b/a-propos.html
@@ -1,118 +1,157 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>À propos - Twitch Entraide New Family</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            color: #4b0082;
-        }
-        header {
-            background-color: #e74c3c;
-            color: white;
-            text-align: center;
-            padding: 2em 1em;
-        }
-        header h1 {
-            font-size: 2em;
-            margin: 0;
-        }
-        .container {
-            padding: 2em;
-            max-width: 900px;
-            margin: auto;
-            line-height: 1.8em;
-        }
-        .back-link {
-            display: block;
-            text-align: center;
-            margin-top: 1em;
-            margin-bottom: 1em;
-            font-weight: bold;
-            color: #4b0082;
-            text-decoration: none;
-        }
-        .back-link:hover {
-            text-decoration: underline;
-        }
-        .social-links, .founders-links {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin-top: 2em;
-            flex-wrap: wrap;
-        }
-        .social-links a, .founders-links a {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            text-decoration: none;
-            color: #4b0082;
-            font-weight: bold;
-            font-size: 0.95em;
-        }
-        .social-links img, .founders-links img {
-            width: 40px;
-            height: 40px;
-            margin-bottom: 0.5em;
-            border-radius: 10px;
-        }
-        .founders-links img {
-            width: 32px;
-            height: 32px;
-            border-radius: 50%;
-        }
+      body {
+        margin: 0;
+        font-family: Arial, sans-serif;
+        background-color: #f5f5f5;
+        color: #4b0082;
+      }
+      header {
+        background-color: #e74c3c;
+        color: white;
+        text-align: center;
+        padding: 2em 1em;
+      }
+      header h1 {
+        font-size: 2em;
+        margin: 0;
+      }
+      .container {
+        padding: 2em;
+        max-width: 900px;
+        margin: auto;
+        line-height: 1.8em;
+      }
+      .back-link {
+        display: block;
+        text-align: center;
+        margin-top: 1em;
+        margin-bottom: 1em;
+        font-weight: bold;
+        color: #4b0082;
+        text-decoration: none;
+      }
+      .back-link:hover {
+        text-decoration: underline;
+      }
+      .social-links,
+      .founders-links {
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        margin-top: 2em;
+        flex-wrap: wrap;
+      }
+      .social-links a,
+      .founders-links a {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-decoration: none;
+        color: #4b0082;
+        font-weight: bold;
+        font-size: 0.95em;
+      }
+      .social-links img,
+      .founders-links img {
+        width: 40px;
+        height: 40px;
+        margin-bottom: 0.5em;
+        border-radius: 10px;
+      }
+      .founders-links img {
+        width: 32px;
+        height: 32px;
+        border-radius: 50%;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <a class="back-link" href="index.html">← Retour à l’accueil</a>
     <header>
-        <h1>🎭 À propos de Twitch Entraide New Family</h1>
+      <h1>🎭 À propos de Twitch Entraide New Family</h1>
     </header>
 
     <div class="container">
-        <p><strong>Twitch Entraide New Family</strong> est une communauté francophone rassemblant des <strong>streamers passionnés</strong>, des <strong>viewers engagés</strong> et des <strong>créateurs en devenir</strong>, dans un esprit de <strong>bienveillance, d'entraide et de respect</strong>.</p>
+      <p>
+        <strong>Twitch Entraide New Family</strong> est une communauté
+        francophone rassemblant des <strong>streamers passionnés</strong>, des
+        <strong>viewers engagés</strong> et des
+        <strong>créateurs en devenir</strong>, dans un esprit de
+        <strong>bienveillance, d'entraide et de respect</strong>.
+      </p>
 
-        <p>Fondé par <strong>ClaraStoneWall</strong>, <strong>Nexou31</strong> et <strong>Red_Shadow_31</strong>, notre serveur Discord a pour mission de créer un espace où chacun peut progresser à son rythme, être soutenu dans ses projets, et partager des moments de fun, de partage et de créativité.</p>
+      <p>
+        Fondé par <strong>ClaraStoneWall</strong>, <strong>Nexou31</strong> et
+        <strong>Red_Shadow_31</strong>, notre serveur Discord a pour mission de
+        créer un espace où chacun peut progresser à son rythme, être soutenu
+        dans ses projets, et partager des moments de fun, de partage et de
+        créativité.
+      </p>
 
-        <ul>
-            <li>L’<strong>entraide sincère</strong>, loin des logiques de compétition ou d’ego.</li>
-            <li>La <strong>diversité des profils</strong>, des jeux, et des parcours.</li>
-            <li>Une <strong>modération structurée</strong> pour garantir un climat sain et inclusif.</li>
-            <li>La <strong>co-construction</strong> de projets ambitieux, comme notre voyage communautaire prévu en 2026.</li>
-        </ul>
+      <ul>
+        <li>
+          L’<strong>entraide sincère</strong>, loin des logiques de compétition
+          ou d’ego.
+        </li>
+        <li>
+          La <strong>diversité des profils</strong>, des jeux, et des parcours.
+        </li>
+        <li>
+          Une <strong>modération structurée</strong> pour garantir un climat
+          sain et inclusif.
+        </li>
+        <li>
+          La <strong>co-construction</strong> de projets ambitieux, comme notre
+          voyage communautaire prévu en 2026.
+        </li>
+      </ul>
 
-        <p>🎮 Que vous soyez streamer affilié, débutant, viewer fidèle ou simple curieux, vous avez votre place dans la <strong>New Family</strong> !</p>
-        <p>💬 Rejoignez-nous, partagez vos passions, apprenez des autres et grandissez dans une ambiance familiale où <strong>l’humain passe avant les chiffres</strong>.</p>
+      <p>
+        🎮 Que vous soyez streamer affilié, débutant, viewer fidèle ou simple
+        curieux, vous avez votre place dans la <strong>New Family</strong> !
+      </p>
+      <p>
+        💬 Rejoignez-nous, partagez vos passions, apprenez des autres et
+        grandissez dans une ambiance familiale où
+        <strong>l’humain passe avant les chiffres</strong>.
+      </p>
 
-        <div class="social-links">
-            <a href="https://discord.com/invite/BWefgvrPcD" target="_blank">
-                <img src="assets/Discord.png" alt="Discord">Discord
-            </a>
-            <a href="https://www.instagram.com/twitchentraidenewfamily" target="_blank">
-                <img src="assets/Instagram.png" alt="Instagram">Insta
-            </a>
-            <a href="https://www.tiktok.com/@twitchentraidenewfamily" target="_blank">
-                <img src="assets/Tiktok.png" alt="TikTok">TikTok
-            </a>
-        </div>
+      <div class="social-links">
+        <a href="https://discord.com/invite/BWefgvrPcD" target="_blank">
+          <img src="assets/Discord.webp" alt="Discord" />Discord
+        </a>
+        <a
+          href="https://www.instagram.com/twitchentraidenewfamily"
+          target="_blank"
+        >
+          <img src="assets/Instagram.webp" alt="Instagram" />Insta
+        </a>
+        <a
+          href="https://www.tiktok.com/@twitchentraidenewfamily"
+          target="_blank"
+        >
+          <img src="assets/Tiktok.webp" alt="TikTok" />TikTok
+        </a>
+      </div>
 
-        <div class="founders-links">
-            <a href="https://www.twitch.tv/clarastonewall" target="_blank">
-                <img src="assets/clarastonnewall.png" alt="Clara">Clara
-            </a>
-            <a href="https://www.twitch.tv/nexou31" target="_blank">
-                <img src="assets/nexou31.png" alt="Nexou">Nexou
-            </a>
-            <a href="https://www.twitch.tv/red_shadow_31" target="_blank">
-                <img src="assets/red_shadow_31.png" alt="Red">Red
-            </a>
-        </div>
+      <div class="founders-links">
+        <a href="https://www.twitch.tv/clarastonewall" target="_blank">
+          <img src="assets/clarastonnewall.webp" alt="Clara" />Clara
+        </a>
+        <a href="https://www.twitch.tv/nexou31" target="_blank">
+          <img src="assets/nexou31.webp" alt="Nexou" />Nexou
+        </a>
+        <a href="https://www.twitch.tv/red_shadow_31" target="_blank">
+          <img src="assets/red_shadow_31.webp" alt="Red" />Red
+        </a>
+      </div>
     </div>
-</body>
+  </body>
 </html>
