--- a/aventura2026.html
+++ b/aventura2026.html
@@ -1,82 +1,183 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>NewFamily Aventura 2026</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <!-- Bandeau principal -->
-  <header style="background: linear-gradient(to right, #c0392b, #8e44ad); color: white; padding: 2rem 1rem; text-align: center; border-radius: 0 0 1rem 1rem; box-shadow: 0 10px 20px rgba(0,0,0,0.2);">
-    <img src="assets/logo.png" alt="Logo Twitch Entraide New Family" style="height: 80px; margin-bottom: 1rem; object-fit: contain;">
-    <h1 style="font-size: 2.5rem; margin: 0;">🌴 NewFamily Aventura 2026</h1>
-    <p style="font-size: 1rem; margin-top: 0.5rem;">Du 13 au 17 mai 2026 (ou dès le 11 pour les motivés) — direction l’Espagne pour un séjour communautaire inoubliable !</p>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <title>NewFamily Aventura 2026</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <!-- Bandeau principal -->
+    <header
+      style="
+        background: linear-gradient(to right, #c0392b, #8e44ad);
+        color: white;
+        padding: 2rem 1rem;
+        text-align: center;
+        border-radius: 0 0 1rem 1rem;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+      "
+    >
+      <img
+        src="assets/logo.webp"
+        alt="Logo Twitch Entraide New Family"
+        style="height: 80px; margin-bottom: 1rem; object-fit: contain"
+      />
+      <h1 style="font-size: 2.5rem; margin: 0">🌴 NewFamily Aventura 2026</h1>
+      <p style="font-size: 1rem; margin-top: 0.5rem">
+        Du 13 au 17 mai 2026 (ou dès le 11 pour les motivés) — direction
+        l’Espagne pour un séjour communautaire inoubliable !
+      </p>
+    </header>
 
-  <!-- Bouton retour -->
-  <div style="text-align: center; margin: 2rem 0;">
-    <a href="index.html" style="background-color: #f44336; color: white; padding: 0.7rem 1.4rem; border-radius: 0.5rem; box-shadow: 0 4px 8px rgba(0,0,0,0.2); text-decoration: none; font-weight: bold;">
-      ⬅️ Retour à l’accueil
-    </a>
-  </div>
-
-  <!-- Trailer YouTube -->
-  <section style="max-width: 900px; margin: 0 auto 3rem; padding: 1rem;">
-    <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; border-radius: 1rem; box-shadow: 0 10px 20px rgba(0,0,0,0.2);">
-      <iframe 
-        src="https://www.youtube.com/embed/WVgvUKb3-XQ"
-        title="Trailer NewFamily Aventura 2026"
-        frameborder="0"
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen
-        style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;">
-      </iframe>
+    <!-- Bouton retour -->
+    <div style="text-align: center; margin: 2rem 0">
+      <a
+        href="index.html"
+        style="
+          background-color: #f44336;
+          color: white;
+          padding: 0.7rem 1.4rem;
+          border-radius: 0.5rem;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+          text-decoration: none;
+          font-weight: bold;
+        "
+      >
+        ⬅️ Retour à l’accueil
+      </a>
     </div>
-  </section>
 
-  <!-- Présentation & infos pratiques -->
-  <section style="background: white; max-width: 900px; margin: 2rem auto; padding: 2rem; border-radius: 1rem; box-shadow: 0 10px 20px rgba(0,0,0,0.1);">
-    <h2 style="font-size: 2rem; color: #c0392b; text-align: center;">🔥 Une aventure humaine unique</h2>
-    <p style="font-size: 1.1rem; margin-top: 1rem;">
-      Ce sera une occasion exceptionnelle de vivre des moments inoubliables entre membres de la New Family, dans une ambiance fun, bienveillante et conviviale. Du barbecue à la chasse au trésor, en passant par deux jours de folie à PortAventura, tout est pensé pour créer du lien, se détendre et rire ensemble 🌞
-    </p>
+    <!-- Trailer YouTube -->
+    <section style="max-width: 900px; margin: 0 auto 3rem; padding: 1rem">
+      <div
+        style="
+          position: relative;
+          padding-bottom: 56.25%;
+          height: 0;
+          overflow: hidden;
+          border-radius: 1rem;
+          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        "
+      >
+        <iframe
+          src="https://www.youtube.com/embed/WVgvUKb3-XQ"
+          title="Trailer NewFamily Aventura 2026"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+          style="position: absolute; top: 0; left: 0; width: 100%; height: 100%"
+        >
+        </iframe>
+      </div>
+    </section>
 
-    <h3 style="margin-top: 2rem; color: #8e44ad;">📅 DATES</h3>
-    <ul>
-      <li>🗓️ Du <strong>13 au 17 mai 2026</strong> (ou dès le <strong>11 mai</strong> pour les motivés)</li>
-    </ul>
+    <!-- Présentation & infos pratiques -->
+    <section
+      style="
+        background: white;
+        max-width: 900px;
+        margin: 2rem auto;
+        padding: 2rem;
+        border-radius: 1rem;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+      "
+    >
+      <h2 style="font-size: 2rem; color: #c0392b; text-align: center">
+        🔥 Une aventure humaine unique
+      </h2>
+      <p style="font-size: 1.1rem; margin-top: 1rem">
+        Ce sera une occasion exceptionnelle de vivre des moments inoubliables
+        entre membres de la New Family, dans une ambiance fun, bienveillante et
+        conviviale. Du barbecue à la chasse au trésor, en passant par deux jours
+        de folie à PortAventura, tout est pensé pour créer du lien, se détendre
+        et rire ensemble 🌞
+      </p>
 
-    <h3 style="margin-top: 1.5rem; color: #8e44ad;">🏠 HÉBERGEMENT</h3>
-    <ul>
-      <li>Grande villa avec piscine réservée au staff (et pour soirées & rencontres)</li>
-      <li>Camping à prix négocié pour les membres</li>
-      <li>Possibilité de s’organiser en petits groupes pour louer d’autres logements</li>
-    </ul>
+      <h3 style="margin-top: 2rem; color: #8e44ad">📅 DATES</h3>
+      <ul>
+        <li>
+          🗓️ Du <strong>13 au 17 mai 2026</strong> (ou dès le
+          <strong>11 mai</strong> pour les motivés)
+        </li>
+      </ul>
 
-    <h3 style="margin-top: 1.5rem; color: #8e44ad;">📌 PROGRAMME</h3>
-    <ul>
-      <li><strong>Mercredi :</strong> Installation + soirée BBQ chill</li>
-      <li><strong>Jeudi :</strong> Chasse au trésor + pique-nique + soirée surprise</li>
-      <li><strong>Vendredi & samedi :</strong> 2 jours à PortAventura 🎢</li>
-      <li><strong>Dimanche :</strong> Détente, derniers moments tous ensemble</li>
-    </ul>
+      <h3 style="margin-top: 1.5rem; color: #8e44ad">🏠 HÉBERGEMENT</h3>
+      <ul>
+        <li>
+          Grande villa avec piscine réservée au staff (et pour soirées &
+          rencontres)
+        </li>
+        <li>Camping à prix négocié pour les membres</li>
+        <li>
+          Possibilité de s’organiser en petits groupes pour louer d’autres
+          logements
+        </li>
+      </ul>
 
-    <h3 style="margin-top: 1.5rem; color: #8e44ad;">🙋‍♂️ POUR QUI ?</h3>
-    <p>Ouvert à <strong>tous les membres</strong>, quel que soit leur rôle. Accompagnants bienvenus !</p>
-  </section>
+      <h3 style="margin-top: 1.5rem; color: #8e44ad">📌 PROGRAMME</h3>
+      <ul>
+        <li><strong>Mercredi :</strong> Installation + soirée BBQ chill</li>
+        <li>
+          <strong>Jeudi :</strong> Chasse au trésor + pique-nique + soirée
+          surprise
+        </li>
+        <li><strong>Vendredi & samedi :</strong> 2 jours à PortAventura 🎢</li>
+        <li>
+          <strong>Dimanche :</strong> Détente, derniers moments tous ensemble
+        </li>
+      </ul>
 
-  <!-- Sondage intention -->
-  <section style="padding: 2rem; background: white; border-radius: 1rem; max-width: 700px; margin: 3rem auto; box-shadow: 0 10px 20px rgba(0,0,0,0.1); text-align: center;">
-    <h2 style="font-size: 1.8rem; font-weight: bold; margin-bottom: 1rem;">📋 Sondage d’intention</h2>
-    <p style="font-size: 1rem; margin-bottom: 1rem;">
-      Pour nous aider à anticiper, merci de répondre au sondage dans Discord avec une réaction (1️⃣ à 6️⃣ selon votre groupe).<br>
-      Cela n’engage à rien mais nous aide beaucoup à prévoir les hébergements et transports !
-    </p>
-    <a href="https://discord.gg/BWefgvrPcD" target="_blank" class="event-button" style="display: inline-flex; align-items: center; padding: 0.8rem 1.5rem; font-weight: 600; background-color: #f44336; color: white; border-radius: 0.6rem; box-shadow: 0 4px 8px rgba(0,0,0,0.2); text-decoration: none;">
-  <img src="assets/discord.png" alt="Discord" style="height: 20px; margin-right: 10px;">
-  Rejoindre le Discord pour s’inscrire
-</a>
-  </section>
+      <h3 style="margin-top: 1.5rem; color: #8e44ad">🙋‍♂️ POUR QUI ?</h3>
+      <p>
+        Ouvert à <strong>tous les membres</strong>, quel que soit leur rôle.
+        Accompagnants bienvenus !
+      </p>
+    </section>
 
-</body>
+    <!-- Sondage intention -->
+    <section
+      style="
+        padding: 2rem;
+        background: white;
+        border-radius: 1rem;
+        max-width: 700px;
+        margin: 3rem auto;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+        text-align: center;
+      "
+    >
+      <h2 style="font-size: 1.8rem; font-weight: bold; margin-bottom: 1rem">
+        📋 Sondage d’intention
+      </h2>
+      <p style="font-size: 1rem; margin-bottom: 1rem">
+        Pour nous aider à anticiper, merci de répondre au sondage dans Discord
+        avec une réaction (1️⃣ à 6️⃣ selon votre groupe).<br />
+        Cela n’engage à rien mais nous aide beaucoup à prévoir les hébergements
+        et transports !
+      </p>
+      <a
+        href="https://discord.gg/BWefgvrPcD"
+        target="_blank"
+        class="event-button"
+        style="
+          display: inline-flex;
+          align-items: center;
+          padding: 0.8rem 1.5rem;
+          font-weight: 600;
+          background-color: #f44336;
+          color: white;
+          border-radius: 0.6rem;
+          box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+          text-decoration: none;
+        "
+      >
+        <img
+          src="assets/discord.webp"
+          alt="Discord"
+          style="height: 20px; margin-right: 10px"
+        />
+        Rejoindre le Discord pour s’inscrire
+      </a>
+    </section>
+  </body>
 </html>
