--- a/interviews.html
+++ b/interviews.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-  <meta charset="UTF-8">
-  <title>Interviews 🎤 - Twitch Entraide New Family</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <img src="assets/logo.png" alt="Logo">
-    <h1>🎤 Interviews de la New Family</h1>
-    <div class="button-container">
-      <a href="index.html" class="about-button">🏠 Retour à l'accueil</a>
-    </div>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Interviews 🎤 - Twitch Entraide New Family</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header>
+      <img src="assets/logo.webp" alt="Logo" />
+      <h1>🎤 Interviews de la New Family</h1>
+      <div class="button-container">
+        <a href="index.html" class="about-button">🏠 Retour à l'accueil</a>
+      </div>
+    </header>
 
-  <section style="text-align:center; padding: 2em;">
-    <p>🎙️ Cette section accueillera bientôt les interviews exclusives de nos membres, disponibles en échange de points d'entraide sur le Discord.</p>
-    <p>Lancement prévu en <strong>septembre 2025</strong> !</p>
-  </section>
-</body>
+    <section style="text-align: center; padding: 2em">
+      <p>
+        🎙️ Cette section accueillera bientôt les interviews exclusives de nos
+        membres, disponibles en échange de points d'entraide sur le Discord.
+      </p>
+      <p>Lancement prévu en <strong>septembre 2025</strong> !</p>
+    </section>
+  </body>
 </html>
