--- a/vip.html
+++ b/vip.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>VIP du mois - New Family</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <img src="assets/logo.png" alt="Logo New Family">
-        <h1>VIP du mois ⭐</h1>
-        <p>Ces membres se sont distingués par leur implication exceptionnelle dans la communauté !</p>
+      <img src="assets/logo.webp" alt="Logo New Family" />
+      <h1>VIP du mois ⭐</h1>
+      <p>
+        Ces membres se sont distingués par leur implication exceptionnelle dans
+        la communauté !
+      </p>
     </header>
-<div class="button-container single-button">
-  <a href="index.html" class="event-button">⬅ Retour à l'accueil</a>
-</div>
+    <div class="button-container single-button">
+      <a href="index.html" class="event-button">⬅ Retour à l'accueil</a>
+    </div>
 
     <div class="user-grid" id="vip-users"></div>
 
     <script src="vip.js"></script>
-</body>
+  </body>
 </html>
