--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header>
-    <img src="assets/logo.png" alt="Logo Twitch Entraide New Family">
+    <img src="assets/logo.webp" alt="Logo Twitch Entraide New Family">
     <h1>Bienvenue sur le site de la New Family !</h1>
     <p>Retrouvez ici tous les lives de notre communauté bienveillante, passionnée et unie autour du partage !</p>
   </header>
