--- a/index.html
+++ b/index.html
@@ -17,35 +17,13 @@
   <head>
     <meta charset="UTF-8" />
     <title>Twitch Entraide - New Family</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="description"
-      content="Site de la communauté Twitch New Family : lives, clips, événements et plus !"
-    />
     <link rel="stylesheet" href="style.css" />
-
-    <!-- ✅ Chargement optimisé des polices système -->
-    <link rel="preload" as="image" href="assets/logo.webp" />
 
     <!-- 🔗 Optimisation des connexions externes -->
     <link rel="preconnect" href="https://api.twitch.tv" />
     <link rel="preconnect" href="https://static-cdn.jtvnw.net" />
     <link rel="preconnect" href="https://clips-media-assets2.twitch.tv" />
     <link rel="preconnect" href="https://www.youtube.com" />
-
-    <!-- ✅ Google Analytics (gtag.js) -->
-    <script
-      async
-      src="https://www.googletagmanager.com/gtag/js?id=G-FMSCPWEE4K"
-    ></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("config", "G-FMSCPWEE4K");
-    </script>
   </head>
 
   <body>
@@ -58,17 +36,7 @@
       </p>
     </header>
 
-    <!-- 🔽 Section des lives (remontée pour le LCP) -->
-    <section id="online">
-      <h2>Actuellement en direct 🎥</h2>
-      <p
-        id="live-count"
-        style="text-align: center; font-weight: bold; font-size: 1.2em"
-      ></p>
-      <div id="live-users" class="user-grid"></div>
-    </section>
-
-    <!-- Boutons -->
+    <!-- Boutons du haut -->
     <div class="button-container">
       <a href="a-propos.html" class="about-button"
         >🎭 En savoir plus sur la New Family</a
@@ -82,7 +50,7 @@
       <a href="interviews.html" class="event-button">🎤 Interviews</a>
     </div>
 
-    <!-- 🏝️ Section Aventura -->
+    <!-- Section NewFamily Aventura 2026 -->
     <section
       style="
         padding: 2rem 1rem;
@@ -143,13 +111,21 @@
       </a>
     </section>
 
-    <!-- 💤 Section offline -->
+    <!-- 🔽 Section des lives (déplacée ici à la fin) -->
+    <section id="online">
+      <h2>Actuellement en direct 🎥</h2>
+      <p
+        id="live-count"
+        style="text-align: center; font-weight: bold; font-size: 1.2em"
+      ></p>
+      <div id="live-users" class="user-grid"></div>
+    </section>
+
     <section id="offline">
       <h2>À découvrir bientôt 👀</h2>
       <div id="offline-users" class="user-grid"></div>
     </section>
 
-    <!-- JavaScript en defer -->
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
   </body>
 </html>
