Fix styles des cards et boutons clips

--- a/clips.html
+++ b/clips.html
@@ -42,13 +42,13 @@
       <div class="mt-4 text-center">
         <button
           id="prev-button"
-          class="px-6 py-2 text-white bg-twitch rounded-lg cursor-pointer hover:bg-twitchH transition"
+          class="px-6 py-2 text-white bg-twitch rounded-lg cursor-pointer shadow-md font-bold hover:bg-violet hover:scale-105 transition"
         >
           🎞️ Clip précédent
         </button>
         <button
           id="next-button"
-          class="px-6 py-2 text-white bg-twitch rounded-lg cursor-pointer hover:bg-twitchH transition"
+          class="px-6 py-2 text-white bg-twitch rounded-lg cursor-pointer shadow-md font-bold hover:bg-violet hover:scale-105 transition"
         >
           🎞️ Clip suivant
         </button>
