--- a/clips.html
+++ b/clips.html
@@ -39,16 +39,17 @@
       <div id="clip-user" class="text-lg font-bold my-2 text-center"></div>
 
       <!-- Boutons -->
-      <div class="mt-4 text-center">
+      <div class="text-center mt-4 space-x-4">
         <button
           id="prev-button"
-          class="px-6 py-2 text-white bg-twitch rounded-lg cursor-pointer shadow-md font-bold hover:bg-violet hover:scale-105 transition"
+          class="inline-flex items-center gap-2 px-7 py-3 bg-twitch text-white font-semibold rounded-2xl shadow-md hover:bg-twitchH hover:-translate-y-0.5 transition transform border-0 outline-none focus:outline-none focus:ring-0 select-none"
         >
           🎞️ Clip précédent
         </button>
+
         <button
           id="next-button"
-          class="px-6 py-2 text-white bg-twitch rounded-lg cursor-pointer shadow-md font-bold hover:bg-violet hover:scale-105 transition"
+          class="inline-flex items-center gap-2 px-7 py-3 bg-twitch text-white font-semibold rounded-2xl shadow-md hover:bg-twitchH hover:-translate-y-0.5 transition transform border-0 outline-none focus:outline-none focus:ring-0 select-none"
         >
           🎞️ Clip suivant
         </button>
